refactor: use Stream.toList() #java17